refractor(.gitignore): 增加.gitignore忽略项
    增加对训练与验证配置文件的忽略。

    增加对所有权重文件的忽略。

--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,10 @@ yolo/weights/
 .vscode/
 .idea/
 
-# 忽略含有绝对路径的数据配置文件
+# 忽略含有绝对路径的配置文件
 yolo/configs/data.yaml
+yolo/configs/train.yaml
+yolo/configs/val.yaml
+
+# 忽略所有权重文件
+**/*.pt
