refractor(.gitignore): 更改忽略项
    将忽略所有视频和图像文件，
    更改为忽略app/目录下无必要上传的目录。

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ yolo/configs/val.yaml
 # 忽略所有权重文件
 **/*.pt
 
-# 忽略所有视频、图像文件
-**/*.jpg
-**/*.mp4
+# 忽略app/下无上传必要目录
+app/logs/
+app/models/
+app/result/
